hard-gists/918d4ad7c931bc14b475008c00aa09f1/run.log
=== Docker Run Log for 918d4ad7c931bc14b475008c00aa09f1 ===
Started at: Mi 29. Okt 18:21:42 CET 2025

[2025-10-29 18:21:43] START: Running container for 918d4ad7c931bc14b475008c00aa09f1
[2025-10-29 18:21:43] SUCCESS: Container 329a70866dd1191071736c8a55461194fabf5df1728b1299e21aff81f4b45441 started for 918d4ad7c931bc14b475008c00aa09f1
=== Container logs for 918d4ad7c931bc14b475008c00aa09f1 ===
  File "/snippet.py", line 17
    print h.size() # Size 20 x 10 x 50 instead of 10 x 20 x 50
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 918d4ad7c931bc14b475008c00aa09f1 ===
[2025-10-29 18:21:45] INFO: Container 329a70866dd1191071736c8a55461194fabf5df1728b1299e21aff81f4b45441 has stopped
